--- a/zerops.yaml
+++ b/zerops.yaml
@@ -1,7 +1,9 @@
-use: [nodejs@14]
-
-run:
-  - npm i
-  - npm run build
-
-deploy: ["build/*"]
+staticserver3:
+  build:
+    base: [nodejs@14]
+    build:
+      - npm i
+      - npm run build
+    deploy: [".next", node_modules, package.json]
+  run:
+    start: npm start
